[package]
name = "http_handler"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde_json = "1"
aws-config = "0.51"
aws-sdk-sns = "0.21"
aws-sdk-dynamodb = "0.21"
common = { path = "../common" }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_21"] }
serde = { version = "1", features = [ "derive" ] }
