[package]
name = "message_handler"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aws_lambda_events = "0.7"
lambda_runtime = "0.7"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
common = { path = "../common" }
serde_json = "1"
uuid = { version = "1.2", features = ["v4"] }
aws-config = "0.51"
aws-sdk-dynamodb = "0.21"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_21"] }
serde = { version = "1", features = [ "derive" ] }
